--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
 		"mustache-express": "^1.3.2",
 		"prettier": "^3.6.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.9.2"
+		"typescript": "^5.9.2",
+		"validator": "^13.15.15"
 	},
 	"devDependencies": {
-		"@types/express": "^5.0.3",
 		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.3",
 		"@types/mustache": "^4.2.6",
 		"@types/mustache-express": "^1.2.5",
-		"@types/node": "^24.3.1"
+		"@types/node": "^24.3.1",
+		"@types/validator": "^13.15.3"
 	}
 }
